resolving libraries must run in the UI thread
as it may open dialogs; it closed the wizard
before the import which resulted in an error